--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -24,11 +24,11 @@
                     <td>{{emp.documentNumber}}</td>
                     <td>{{emp.firstName}}</td>
                     <td>{{emp.lastName}}</td>
-                    <td>{{emp.phoneNumber}}</td>
-                    <td>{{emp.emailAddress}}</td>
+                    <td>{{emp.phone}}</td>
+                    <td>{{emp.email}}</td>
                     <td>
                         <button class="btn btn-primary" routerLink="/editar-empleado/{{ emp.id }}">Editar</button>
-                        <button class="btn btn-danger">Eliminar</button>
+                        <button class="btn btn-danger" (click)="deleteEmployee(emp.id,indice)">Eliminar</button>
                     </td>
                 </tr>
             </tbody>
